# afr-mpu6886

./: .gitmodules  CMakeLists.txt  README.md  component.mk
MahonyAHRS/: CMakeLists.txt  MahonyAHRS.h
include/: mpu6886.h
src/: mpu6886.c
